# StreamingApp

./: pyproject.toml
stream/: config.yaml  config_parser.py
stream/etl/: base.py  read.py  update_stat.py  write.py  write_base.py
stream/main/: etl_job.py
