[tool.poetry]
name = "streamingapp"
version = "0.1.0"
description = "Dummy streaming application with update statistics feature"
authors = ["Rahul Paul <rahul8.paul@gmail.com>"]

include = [
    { path = "stream/config.yaml" }
]

[tool.poetry.dependencies]
python = ">3.7.1, <3.9.10"
pandas = "^1.3.5"
mysql = "^0.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
